[package]
name = "infochallenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noodles-bgzf = { version = "0.20.0", features = ["libdeflate"]}
noodles = { version = "0.35.0", features = ["vcf", "bcf", "csi"] }
rayon = "1.7.0"
itertools = "0.10.5"
peroxide = "0.32.1"
crossbeam = "0.8.2"
polars = { version = "0.28.0", features = ["performant", "simd", "dtype-i8", "abs"] }

[profile.release]
lto = "fat"
codegen-units = 1